--- a/src/components/x/scroll.css
+++ b/src/components/x/scroll.css
@@ -6,7 +6,7 @@ Created by Andrey Shpigunov on 27.09.2024.
 ---------------------------*/
 
 
-/* Scroll - native CSS horizontal scroller */
+/* !- Scroll - native CSS horizontal scroller */
 
 
 /*
