--- a/src/components/x/sticky.css
+++ b/src/components/x/sticky.css
@@ -6,7 +6,7 @@ Created by Andrey Shpigunov on 27.09.2024.
 ---------------------------*/
 
 
-/* Sticky */
+/* !- Sticky */
 
 
 /* .sticky (m,l,xl) */
