--- a/src/components/x/flow.css
+++ b/src/components/x/flow.css
@@ -6,12 +6,12 @@ Created by Andrey Shpigunov on 19.09.2024.
 ---------------------------*/
 
 
-/* Vertical flow of elements with margin-top space  */
+/* !- Flow — vertical flow of elements with margin-top space  */
 
 
 /*
   .flow
-  .flow.s[0-10] (xs,m,l,xl)   - vertical space
+  .flow.s[0-10] (m,l,xl)   - vertical space
 */
 
 
@@ -23,14 +23,6 @@ Created by Andrey Shpigunov on 19.09.2024.
   @for $i from 0 to 10 {
     &.s$(i) > * {
       margin-bottom: var(--space-$(i));
-    }
-  }
-  
-  @media(--xsmall){
-    @for $i from 0 to 10 {
-      &.xs\:s$(i) > * {
-        margin-bottom: var(--space-$(i));
-      }
     }
   }
   
