--- a/src/components/x/form.css
+++ b/src/components/x/form.css
@@ -6,7 +6,7 @@ Created by Andrey Shpigunov on 08.09.2024.
 ---------------------------*/
 
 
-/* Form default styles */
+/* !- Form default styles */
 
 
 :root {
