--- a/src/components/x/grid.css
+++ b/src/components/x/grid.css
@@ -2,7 +2,7 @@
 grid.css
 x
 
-Created by Andrey Shpigunov on 08.09.2024.
+Created by Andrey Shpigunov on 28.11.2024.
 ---------------------------*/
 
 
@@ -11,8 +11,9 @@ Created by Andrey Shpigunov on 08.09.2024.
 
 /*
   .grid
-  .grid.g[1-12] (xs,m,l,xl)   - columns in grid
-  .grid .c[1-12] (xs,m,l,xl)  - column width
+  .grid.g[1-12]           (m,l,xl)  - columns limit in grid
+  .grid > .c[1-12]        (m,l,xl)  - column width
+  .grid > .c[1-12]/[1-12] (m,l,xl)  - columns range for content
 */
 
 
@@ -20,37 +21,91 @@ Created by Andrey Shpigunov on 08.09.2024.
   display: grid;
   width: 100%;
   grid-template-columns: repeat(12, 1fr);
+  grid-auto-flow: dense;
   
   @for $i from 1 to 12 {
     &.g$(i)  { grid-template-columns: repeat($(i), 1fr) }
-    & .c$(i) { grid-column: span $(i) }
-  }
-  
-  @media (--xsmall) {
-    @for $i from 1 to 12 {
-      &.xs\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
-      & .xs\:c$(i) { grid-column: span $(i) }
+    & > .c$(i) { grid-column: span $(i) }
+    
+    @for $m from 12 to $i {
+      & > .c$(i)\/$(m) {
+        grid-column: $(i) / calc($(m) + 1)
+      }
     }
   }
+  
+  & .jss   { justify-self: start }
+  & .jse   { justify-self: end }
+  & .jsc   { justify-self: center }
+  & .jsstr { justify-self: stretch }
+  & .ass   { align-self: start }
+  & .ase   { align-self: end }
+  & .asc   { align-self: center }
+  & .asstr { align-self: stretch }
   
   @media (--medium) {
     @for $i from 1 to 12 {
       &.m\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
-      & .m\:c$(i) { grid-column: span $(i) }
+      & > .m\:c$(i) { grid-column: span $(i) }
+      
+      @for $m from 12 to $i {
+        & > .m\:c$(i)\/$(m) {
+          grid-column: $(i) / calc($(m) + 1)
+        }
+      }
     }
+    
+    & .m\:jss   { justify-self: start }
+    & .m\:jse   { justify-self: end }
+    & .m\:jsc   { justify-self: center }
+    & .m\:jsstr { justify-self: stretch }
+    & .m\:ass   { align-self: start }
+    & .m\:ase   { align-self: end }
+    & .m\:asc   { align-self: center }
+    & .m\:asstr { align-self: stretch }
   }
   
   @media (--large) {
     @for $i from 1 to 12 {
       &.l\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
-      & .l\:c$(i) { grid-column: span $(i) }
+      & > .l\:c$(i) { grid-column: span $(i) }
+      
+      @for $m from 12 to $i {
+        & > .l\:c$(i)\/$(m) {
+          grid-column: $(i) / calc($(m) + 1)
+        }
+      }
     }
+    
+    & .l\:jss   { justify-self: start }
+    & .l\:jse   { justify-self: end }
+    & .l\:jsc   { justify-self: center }
+    & .l\:jsstr { justify-self: stretch }
+    & .l\:ass   { align-self: start }
+    & .l\:ase   { align-self: end }
+    & .l\:asc   { align-self: center }
+    & .l\:asstr { align-self: stretch }
   }
   
   @media (--xlarge) {
     @for $i from 1 to 12 {
       &.xl\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
-      & .xl\:c$(i) { grid-column: span $(i) }
+      & > .xl\:c$(i) { grid-column: span $(i) }
+      
+      @for $m from 12 to $i {
+        & > .xl\:c$(i)\/$(m) {
+          grid-column: $(i) / calc($(m) + 1)
+        }
+      }
     }
+    
+    & .xl\:jss   { justify-self: start }
+    & .xl\:jse   { justify-self: end }
+    & .xl\:jsc   { justify-self: center }
+    & .xl\:jsstr { justify-self: stretch }
+    & .xl\:ass   { align-self: start }
+    & .xl\:ase   { align-self: end }
+    & .xl\:asc   { align-self: center }
+    & .xl\:asstr { align-self: stretch }
   }
 }
