--- a/src/components/x/modal.css
+++ b/src/components/x/modal.css
@@ -6,7 +6,7 @@ Created by Andrey Shpigunov on 18.09.2024.
 ---------------------------*/
 
 
-/* Modal windows */
+/* !- Modal windows */
 
 
 :root {
