--- a/src/components/x/space.css
+++ b/src/components/x/space.css
@@ -6,21 +6,10 @@ Created by Andrey Shpigunov on 20.09.2024.
 ---------------------------*/
 
 
-/* Spaces variables */
+/* !- Spaces variables */
 
 :root {
   /* Spaces */
-  /* --space-0:  0;
-  --space-1:  0.25rem;
-  --space-2:  0.5rem;
-  --space-3:  0.75rem;
-  --space-4:  1rem;
-  --space-5:  1.5rem;
-  --space-6:  2rem;
-  --space-7:  3rem;
-  --space-8:  4rem;
-  --space-9:  6rem;
-  --space-10: 8rem; */
   --space-0:  0;
   --space-1:  0.4rem;
   --space-2:  0.8rem;
