--- a/src/components/x/typo.css
+++ b/src/components/x/typo.css
@@ -6,18 +6,18 @@ Created by Andrey Shpigunov on 07.09.2024.
 ---------------------------*/
 
 
-/* Typo */
+/* !- Typo */
 
 
 /*
   .h[1-6]
   .mono
   .italic
-  .fs[10-19] step 1 (xs,m,l,xl) - size in rem - 1.0, 1.1, 1.2, ..., 1.9
-  .fs[20-80] step 2 (xs,m,l,xl) - size in rem - 2.0, 2.2, 2.4, ..., 8.0
-  .fw[100-900] step 100 (xs,m,l,xl)
-  .ls[0-4] (xs,m,l)
-  .lh[0-9] (xs,m,l)  - values: 1.0-1.9
+  .fs[10-19] step 1 (m,l,xl) - size in rem - 1.0, 1.1, 1.2, ..., 1.9
+  .fs[20-80] step 2 (m,l,xl) - size in rem - 2.0, 2.2, 2.4, ..., 8.0
+  .fw[100-900] step 100 (m,l,xl)
+  .ls[0-4] (m,l,xl)
+  .lh[0-9] (m,l,xl)  - values: 1.0-1.9
 */
 
 
@@ -206,26 +206,6 @@ table {
 .fw800 { font-weight: 800 !important }
 .fw900 { font-weight: 900 !important }
 
-@media (--xsmall) {
-  
-  @for $i from 10 to 19 {
-    .xs\:fs$(i) { font-size: calc($(i)rem / 10) !important }
-  }
-  @for $i from 20 to 80 by 2 {
-    .xs\:fs$(i) { font-size: calc($(i)rem / 10) !important }
-  }
-  
-  .xs\:fw100 { font-weight: 100 !important }
-  .xs\:fw200 { font-weight: 200 !important }
-  .xs\:fw300 { font-weight: 300 !important }
-  .xs\:fw400 { font-weight: 400 !important }
-  .xs\:fw500 { font-weight: 500 !important }
-  .xs\:fw600 { font-weight: 600 !important }
-  .xs\:fw700 { font-weight: 700 !important }
-  .xs\:fw800 { font-weight: 800 !important }
-  .xs\:fw900 { font-weight: 900 !important }
-}
-
 @media (--medium) {
   
   @for $i from 10 to 19 {
@@ -293,13 +273,6 @@ table {
 .ls3  { letter-spacing: .25em !important }
 .ls4  { letter-spacing: .5em !important }
 
-@media (--xsmall) {
-  .xs\:ls0  { letter-spacing: 0 !important }
-  .xs\:ls1  { letter-spacing: .0625em !important }
-  .xs\:ls2  { letter-spacing: .125em !important }
-  .xs\:ls3  { letter-spacing: .25em !important }
-  .xs\:ls4  { letter-spacing: .5em !important }
-}
 @media (--medium) {
   .m\:ls0  { letter-spacing: 0 !important }
   .m\:ls1  { letter-spacing: .0625em !important }
@@ -328,11 +301,6 @@ table {
   .lh$(i)  { line-height: 1.$(i) !important }
 }
 
-@media (--xsmall) {
-  @for $i from 0 to 9 {
-    .xs\:lh$(i)  { line-height: 1.$(i) !important }
-  }
-}
 @media (--medium) {
   @for $i from 0 to 9 {
     .m\:lh$(i)  { line-height: 1.$(i) !important }
