--- a/src/components/x/typo.css
+++ b/src/components/x/typo.css
@@ -23,7 +23,7 @@ Created by Andrey Shpigunov on 07.09.2024.
 
 :root {
   --headers-margin-top: 1em;
-  --headers-margin-bottom: .75em;
+  --headers-margin-bottom: .5em;
   --headers-font-family: var(--font-family);
   --headers-font-weight: 700;
   --headers-font-color: var(--font-color);
@@ -42,8 +42,9 @@ Created by Andrey Shpigunov on 07.09.2024.
   --h5-font-size: calc(1.8em * 0.625);
   --h6-font-size: calc(1.6em * 0.625); */
 
-  --h1-line-height: 1.3;
-  --h2-line-height: 1.4;
+  --h1-line-height: 1.2;
+  --h2-line-height: 1.3;
+  --h3-line-height: 1.4;
 
   --paragraph-margin: 1em;
 
@@ -93,7 +94,10 @@ h2, .h2 {
   line-height: var(--h2-line-height);
   font-size: var(--h2-font-size);
 }
-h3, .h3 { font-size: var(--h3-font-size) }
+h3, .h3 {
+  line-height: var(--h3-line-height);
+  font-size: var(--h3-font-size);
+}
 h4, .h4 { font-size: var(--h4-font-size) }
 h5, .h5 { font-size: var(--h5-font-size) }
 h6, .h6 { font-size: var(--h6-font-size) }
@@ -145,7 +149,7 @@ pre {
 
 ul, ol, dl {
   margin: var(--paragraph-margin) 0;
-  padding-left: calc(var(--paragraph-margin) * 2);
+  padding-left: calc(var(--paragraph-margin) * 1.5);
   
   & ul, & ol, & dl, & li {
     margin: var(--space-1) 0;
