--- a/src/components/x/helpers.css
+++ b/src/components/x/helpers.css
@@ -18,9 +18,7 @@ Created by Andrey Shpigunov on 08.09.2024.
   .nowrap
   .hyphens
   .pointer
-  .toe
-  .toe2
-  .toe3
+  .lc[1-5] (m,l,xl) — text line clamp
   .oh
   .touch-show
   .touch-hide
@@ -148,22 +146,33 @@ Created by Andrey Shpigunov on 08.09.2024.
 .pointer {
   cursor: pointer;
 }
-.toe {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
+
+
+/* !- Text line clamp */
+@for $i from 0 to 5 {
+  .lc$(i) {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 }
-.toe2 {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+@for $i from 0 to 5 {
+  .lc$(i) { -webkit-line-clamp: $(i) }
 }
-.toe3 {
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+@media (--medium) {
+  @for $i from 0 to 5 {
+    .m\:lc$(i) { -webkit-line-clamp: $(i) }
+  }
+}
+@media (--large) {
+  @for $i from 0 to 5 {
+    .l\:lc$(i) { -webkit-line-clamp: $(i) }
+  }
+}
+@media (--xlarge) {
+  @for $i from 0 to 5 {
+    .xl\:lc$(i) { -webkit-line-clamp: $(i) }
+  }
 }
 
 
