--- a/src/components/x/debug.css
+++ b/src/components/x/debug.css
@@ -1,12 +1,9 @@
-/*---------------------------
+/*----------------------------------------
 debug.css
-x
-
-Created by Andrey Shpigunov on 08.09.2024.
----------------------------*/
-
-
-/* CMS debugger style */
+x | Debug styles (only for CMS)
+Created by Andrey Shpigunov at 20.01.2025
+All right reserved.
+----------------------------------------*/
 
 
 .debug-info {
