--- a/src/components/x/flex.css
+++ b/src/components/x/flex.css
@@ -1,12 +1,9 @@
-/*---------------------------
+/*----------------------------------------
 flex.css
-x
-
-Created by Andrey Shpigunov on 19.09.2024.
----------------------------*/
-
-
-/* Flexbox */
+x | Flexbox
+Created by Andrey Shpigunov at 20.01.2025
+All right reserved.
+----------------------------------------*/
 
 
 /*
