--- a/src/components/x/flow.css
+++ b/src/components/x/flow.css
@@ -1,12 +1,9 @@
-/*---------------------------
+/*----------------------------------------
 flow.css
-x
-
-Created by Andrey Shpigunov on 19.09.2024.
----------------------------*/
-
-
-/* !- Flow — vertical flow of elements with margin-top space  */
+x | Flow — vertical flow of elements with margin-bottom space
+Created by Andrey Shpigunov at 20.01.2025
+All right reserved.
+----------------------------------------*/
 
 
 /*
