--- a/src/components/x/form.css
+++ b/src/components/x/form.css
@@ -1,12 +1,9 @@
-/*---------------------------
+/*----------------------------------------
 form.css
-x
-
-Created by Andrey Shpigunov on 08.09.2024.
----------------------------*/
-
-
-/* !- Form default styles */
+x | Form default styles
+Created by Andrey Shpigunov at 20.01.2025
+All right reserved.
+----------------------------------------*/
 
 
 :root {
