--- a/src/components/x/grid.css
+++ b/src/components/x/grid.css
@@ -1,12 +1,9 @@
-/*---------------------------
+/*----------------------------------------
 grid.css
-x
-
-Created by Andrey Shpigunov on 28.11.2024.
----------------------------*/
-
-
-/* !- Grid prototype */
+x | Grid prototype
+Created by Andrey Shpigunov at 20.01.2025
+All right reserved.
+----------------------------------------*/
 
 
 /*
