--- a/src/components/x/helpers.css
+++ b/src/components/x/helpers.css
@@ -1,9 +1,9 @@
-/*---------------------------
+/*----------------------------------------
 helpers.css
-x
-
-Created by Andrey Shpigunov on 08.09.2024.
----------------------------*/
+x | Helpers
+Created by Andrey Shpigunov at 12.02.2025
+All right reserved.
+----------------------------------------*/
 
 
 /* !- Helpers – small help for you code. */
