--- a/src/components/x/links.css
+++ b/src/components/x/links.css
@@ -1,9 +1,9 @@
-/*---------------------------
+/*----------------------------------------
 links.css
-x
-
-Created by Andrey Shpigunov on 19.09.2024.
----------------------------*/
+x | Links
+Created by Andrey Shpigunov at 12.02.2025
+All right reserved.
+----------------------------------------*/
 
 
 /* !- Links styles */
