--- a/src/components/x/modal.css
+++ b/src/components/x/modal.css
@@ -1,9 +1,9 @@
-/*---------------------------
+/*----------------------------------------
 modal.css
-x
-
-Created by Andrey Shpigunov on 18.09.2024.
----------------------------*/
+x | Modal windows
+Created by Andrey Shpigunov at 12.02.2025
+All right reserved.
+----------------------------------------*/
 
 
 /* !- Modal windows */
