--- a/src/components/x/reset.css
+++ b/src/components/x/reset.css
@@ -1,9 +1,10 @@
-/*---------------------------
+/*----------------------------------------
 reset.css
-auto
+x | Reset CSS
+Created by Andrey Shpigunov at 12.02.2025
+All right reserved.
+----------------------------------------*/
 
-Created by andreyshpigunov on 25.05.2021.
----------------------------*/
 
 
 /* !- CSS reset */
