--- a/src/components/x/scroll.css
+++ b/src/components/x/scroll.css
@@ -1,9 +1,9 @@
-/*---------------------------
+/*----------------------------------------
 scroll.css
-x
-
-Created by Andrey Shpigunov on 27.09.2024.
----------------------------*/
+x | Scroll
+Created by Andrey Shpigunov at 12.02.2025
+All right reserved.
+----------------------------------------*/
 
 
 /* !- Scroll - native CSS horizontal scroller */
