--- a/src/components/x/sticky.css
+++ b/src/components/x/sticky.css
@@ -1,9 +1,10 @@
-/*---------------------------
+/*----------------------------------------
 sticky.css
-x
+x | Sticky
+Created by Andrey Shpigunov at 12.02.2025
+All right reserved.
+----------------------------------------*/
 
-Created by Andrey Shpigunov on 27.09.2024.
----------------------------*/
 
 
 /* !- Sticky */
