--- a/src/components/x/sheets.css
+++ b/src/components/x/sheets.css
@@ -1,16 +1,16 @@
-/*---------------------------
+/*----------------------------------------
 sheets.css
-x
-
-Created by Andrey Shpigunov on 21.09.2024.
----------------------------*/
+x | Sheets
+Created by Andrey Shpigunov at 12.02.2025
+All right reserved.
+----------------------------------------*/
 
 
 /* !- Sheets */
 
 
 .sheet-tab {
-  
+  /* ... */
 }
 .sheet-body:not(.active) {
   display: none;
