--- a/src/components/x/space.css
+++ b/src/components/x/space.css
@@ -1,12 +1,13 @@
-/*---------------------------
+/*----------------------------------------
 space.css
-x
-
-Created by Andrey Shpigunov on 20.09.2024.
----------------------------*/
+x | Spaces
+Created by Andrey Shpigunov at 12.02.2025
+All right reserved.
+----------------------------------------*/
 
 
 /* !- Spaces variables */
+
 
 :root {
   /* Spaces */
