--- a/src/css/app.css
+++ b/src/css/app.css
@@ -29,7 +29,7 @@ Created by andreyshpigunov on 25.05.2021.
         --link-color-hover: #8bcdff;
         --link-color-visited: #8bcdff;
         --link-border-color: #8bcdff44;
-        --modal-background: #111;
+        --modal-background: #2a2a2a;
         --code-font-color: #eee;
         --code-background-color: #333;
         --table-border-color: #666;
