--- a/src/components/x/reset.css
+++ b/src/components/x/reset.css
@@ -94,7 +94,6 @@ html {
   -moz-font-feature-settings: 'liga', 'kern';
   color: var(--font-color);
   scroll-behavior: smooth;
-  touch-action: manipulation;
 }
 body {
   font-size: var(--font-size);
@@ -132,6 +131,10 @@ select, button {
 }
 textarea {
   line-height: var(--line-height);
+}
+a, button, .button,
+input[type=button] {
+  touch-action: manipulation;
 }
 hr {
   display: block;
