--- a/src/css/x.css
+++ b/src/css/x.css
@@ -22,3 +22,4 @@ Created by andreyshpigunov on 25.05.2021.
 @import "../components/x/modal.css";
 @import "../components/x/debug.css";
 @import "../components/x/scroll.css";
+@import "../components/x/icons.css";
