--- a/src/css/x.css
+++ b/src/css/x.css
@@ -23,3 +23,4 @@ Created by andreyshpigunov on 25.05.2021.
 @import "../components/x/debug.css";
 @import "../components/x/scroll.css";
 @import "../components/x/icons.css";
+@import "../components/x/colors.css";
